<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.hero</groupId>
    <artifactId>HeroWebAppJakartaEE</artifactId>
    <version>1.0</version>
    <packaging>war</packaging>

    <dependencies>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>5.0.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- MySQL Connector -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.4.0</version>
        </dependency>
    </dependencies>


    <build>
        <finalName>HeroWebAppJakartaEE</finalName><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>23</source><target>23</target><compilerArgs>--enable-preview</compilerArgs></configuration></plugin></plugins>
    </build>
</project>